<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/main_menu" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_beacon"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_beacon" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_stats" />
    </group>

    <group android:id="@+id/bar_menu" android:checkableBehavior="single" android:visible="false">

    </group>

    <item android:id="@+id/other_menu" android:title="@string/menu_type_settings">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_condition"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_condition" />
            <item
                android:id="@+id/nav_problem"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_problem" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
